--- a/DYZB/DYZB/Class/Home/View/CollectionHeaderView.xib
+++ b/DYZB/DYZB/Class/Home/View/CollectionHeaderView.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR" customClass="CollectionHeaderView" customModule="DYZB" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
@@ -23,19 +23,24 @@
                     </constraints>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_header_hot" translatesAutoresizingMaskIntoConstraints="NO" id="uFY-Xf-eMw">
-                    <rect key="frame" x="5" y="21" width="18" height="18"/>
+                    <rect key="frame" x="10" y="20" width="18" height="18"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="18" id="aAw-ME-5E1"/>
+                        <constraint firstAttribute="width" constant="18" id="60F-zA-evY"/>
+                        <constraint firstAttribute="height" constant="18" id="uVo-DZ-h8n"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="颜值" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ru-lL-aS1">
-                    <rect key="frame" x="28" y="23" width="25" height="15"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <rect key="frame" x="33" y="20.5" width="100" height="18"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="18" id="2lp-7z-Bil"/>
+                        <constraint firstAttribute="width" constant="100" id="eBh-yW-7kZ"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mU0-aW-xLA">
-                    <rect key="frame" x="262" y="17" width="53" height="27"/>
+                    <rect key="frame" x="262" y="15.5" width="53" height="27"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="53" id="UcH-NE-S2F"/>
                     </constraints>
@@ -47,17 +52,21 @@
                 </button>
             </subviews>
             <constraints>
+                <constraint firstItem="mU0-aW-xLA" firstAttribute="centerY" secondItem="2Ru-lL-aS1" secondAttribute="centerY" id="0uE-I7-KbG"/>
                 <constraint firstAttribute="trailing" secondItem="mU0-aW-xLA" secondAttribute="trailing" constant="5" id="2Tr-v6-Yjr"/>
+                <constraint firstItem="uFY-Xf-eMw" firstAttribute="top" secondItem="gJA-oC-4Yu" secondAttribute="bottom" constant="10" id="3j2-ZS-3qv"/>
+                <constraint firstItem="uFY-Xf-eMw" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" constant="10" id="6gk-LA-86k"/>
                 <constraint firstItem="gJA-oC-4Yu" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" id="CkU-EB-eVb"/>
-                <constraint firstAttribute="bottom" secondItem="uFY-Xf-eMw" secondAttribute="bottom" constant="11" id="G7S-5O-mJF"/>
-                <constraint firstItem="uFY-Xf-eMw" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" constant="5" id="JBk-ty-JgZ"/>
                 <constraint firstItem="gJA-oC-4Yu" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" id="KDl-od-wFk"/>
-                <constraint firstItem="2Ru-lL-aS1" firstAttribute="centerY" secondItem="uFY-Xf-eMw" secondAttribute="centerY" id="Mgq-o9-gAP"/>
-                <constraint firstItem="uFY-Xf-eMw" firstAttribute="top" secondItem="gJA-oC-4Yu" secondAttribute="bottom" constant="11" id="TPc-Fp-cPI"/>
-                <constraint firstItem="2Ru-lL-aS1" firstAttribute="leading" secondItem="uFY-Xf-eMw" secondAttribute="trailing" constant="5" id="dms-fS-4Nh"/>
                 <constraint firstAttribute="trailing" secondItem="gJA-oC-4Yu" secondAttribute="trailing" id="kNs-Kk-pD4"/>
-                <constraint firstItem="mU0-aW-xLA" firstAttribute="centerY" secondItem="2Ru-lL-aS1" secondAttribute="centerY" id="w2g-EY-Dy1"/>
+                <constraint firstItem="2Ru-lL-aS1" firstAttribute="leading" secondItem="uFY-Xf-eMw" secondAttribute="trailing" constant="5" id="mce-ml-SZS"/>
+                <constraint firstItem="2Ru-lL-aS1" firstAttribute="centerY" secondItem="uFY-Xf-eMw" secondAttribute="centerY" id="tgT-2Y-Fj4"/>
             </constraints>
+            <connections>
+                <outlet property="iconImageView" destination="uFY-Xf-eMw" id="yHu-yv-3dO"/>
+                <outlet property="titleLabel" destination="2Ru-lL-aS1" id="5ZO-OQ-ZgJ"/>
+            </connections>
+            <point key="canvasLocation" x="-30" y="52"/>
         </collectionReusableView>
     </objects>
     <resources>
