--- a/DYZB/DYZB/Class/Home/View/RecommendCycleView.xib
+++ b/DYZB/DYZB/Class/Home/View/RecommendCycleView.xib
@@ -26,6 +26,7 @@
                     </collectionViewFlowLayout>
                     <connections>
                         <outlet property="dataSource" destination="iN0-l3-epB" id="Yzy-2v-qbs"/>
+                        <outlet property="delegate" destination="iN0-l3-epB" id="1kY-eR-T5k"/>
                     </connections>
                 </collectionView>
                 <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="iEo-7y-e0Q">
@@ -34,7 +35,7 @@
                     <color key="currentPageIndicatorTintColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </pageControl>
             </subviews>
-            <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="35Y-sB-Sst" secondAttribute="bottom" id="2JS-NM-QHX"/>
                 <constraint firstItem="35Y-sB-Sst" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="7bP-ml-W1Y"/>
