--- a/DYZB/DYZB/Class/Home/View/CollectionHeaderView.xib
+++ b/DYZB/DYZB/Class/Home/View/CollectionHeaderView.xib
@@ -25,7 +25,6 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_header_hot" translatesAutoresizingMaskIntoConstraints="NO" id="uFY-Xf-eMw">
                     <rect key="frame" x="10" y="20" width="18" height="18"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="18" id="60F-zA-evY"/>
                         <constraint firstAttribute="height" constant="18" id="uVo-DZ-h8n"/>
                     </constraints>
                 </imageView>
@@ -64,6 +63,7 @@
             </constraints>
             <connections>
                 <outlet property="iconImageView" destination="uFY-Xf-eMw" id="yHu-yv-3dO"/>
+                <outlet property="moreBtn" destination="mU0-aW-xLA" id="Z07-Po-W1N"/>
                 <outlet property="titleLabel" destination="2Ru-lL-aS1" id="5ZO-OQ-ZgJ"/>
             </connections>
             <point key="canvasLocation" x="-30" y="52"/>
