--- a/DYZB/DYZB/Class/Home/View/GameCollectionViewCell.xib
+++ b/DYZB/DYZB/Class/Home/View/GameCollectionViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="GameCollectionViewCell" customModule="DYZB" customModuleProvider="target">
+        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="GameCollectionViewCell" customModule="DYZB" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="80" height="90"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -38,6 +38,13 @@
                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                         </userDefinedRuntimeAttributes>
                     </imageView>
+                    <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aLz-fr-ph5">
+                        <rect key="frame" x="0.0" y="90" width="80" height="1"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="zXO-IG-RCj"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <constraints>
@@ -45,6 +52,9 @@
                 <constraint firstItem="Hjm-ey-w1T" firstAttribute="top" secondItem="1VC-fv-cCu" secondAttribute="bottom" constant="9" id="P4x-Un-dO6"/>
                 <constraint firstAttribute="bottom" secondItem="Hjm-ey-w1T" secondAttribute="bottom" constant="10" id="Svc-AO-hAj"/>
                 <constraint firstItem="Hjm-ey-w1T" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="WuG-FY-j2X"/>
+                <constraint firstItem="aLz-fr-ph5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="dP1-c7-qT7"/>
+                <constraint firstAttribute="trailing" secondItem="aLz-fr-ph5" secondAttribute="trailing" id="y9X-VQ-OdZ"/>
+                <constraint firstAttribute="bottom" secondItem="aLz-fr-ph5" secondAttribute="bottom" constant="-1" id="zFW-WF-ACc"/>
             </constraints>
             <size key="customSize" width="185" height="209"/>
             <connections>
