--- a/DYZB/DYZB/Class/Home/Controller/Home.storyboard
+++ b/DYZB/DYZB/Class/Home/Controller/Home.storyboard
@@ -12,7 +12,7 @@
         <!--首页-->
         <scene sceneID="pRK-T9-Mtz">
             <objects>
-                <navigationController id="DPl-S6-TRX" sceneMemberID="viewController">
+                <navigationController id="DPl-S6-TRX" customClass="CustomNavigationViewController" customModule="DYZB" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="首页" image="btn_home_normal" selectedImage="btn_home_selected" id="hyw-6s-eaw"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gZa-NM-vyH">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
